[package]
name = "mdtrans"
version = "0.1.0"
auther = "Longlong"
edition = "2021"

[dependencies]
hmac = "0.12.1"
sha2 = "0.10.8"
chrono = {version = "0.4", features = ["unstable-locales"]}
url = "2.5.2"
base64 = "0.22.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
